--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -1,4 +1,4 @@
 <div class="system-status">
   {{name}} is currently
-  <span>{{status}}</span>
+  <span>{{status === 'true' ? 'Available' : 'In Use'}}</span>
 </div>
