Adding in Times

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
   <img width="300" alt="Angular Logo" src="./assets/arcade.ico">
 </div>
 <div *ngFor="let system of systems">
-  <app-system name="{{system.name}}" status="{{system.status}}"></app-system>
+  <app-system name="{{system.name}}" status="{{system.status}}" updated="{{system.updated}}"></app-system>
 </div>
