--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,4 @@
 <app-system name="Playstation 4"></app-system>
 <app-system name="Arcade Cabinet"></app-system>
 
+<app-status-table></app-status-table>
