show data from db using table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
   <app-system name="{{system.name}}" status="{{system.status}}" updated="{{system.updated}}"></app-system>
 </div>
 
-<app-status-table></app-status-table>
+<app-status-table [systems]="systems"></app-status-table>
