--- a/src/app/status-table/status-table.component.html
+++ b/src/app/status-table/status-table.component.html
@@ -9,8 +9,8 @@
   <ng-template pTemplate="body" let-system>
       <tr>
           <td>{{system.name}}</td>
-          <td>{{system.status}}</td>
-          <td>{{system.updated}}</td>
+          <td>{{system.status === 'true' ? 'Available  ' : 'In Use  '}}</td>
+          <td>{{formatDate(system.updated)}}</td>
       </tr>
   </ng-template>
 </p-table>
