Updates styles. Adds clock.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<div style="text-align:center">
-  <h1>
-    {{ title }}!
-  </h1>
-  <img width="300" alt="Angular Logo" src="./assets/arcade.ico">
+<div class="ui-fluid">
+  <div style="text-align: center;">
+    <img class="header-image" alt="Angular Logo" src="./assets/arcade.ico">
+  </div>
+  <div class="ui-g">
+      <div class="ui-g-8">
+        <app-status-table [systems]="systems"></app-status-table>
+      </div>
+      <div class="ui-g-4 clock-wrapper">
+        <div class="clock-face">{{parsedTime}}</div>
+      </div>
+  </div>
 </div>
-<app-status-table [systems]="systems"></app-status-table>
