--- a/src/app/status-table/status-table.component.html
+++ b/src/app/status-table/status-table.component.html
@@ -1,16 +1,18 @@
 <p-table [value]="systems">
-  <ng-template pTemplate="header">
-      <tr>
-        <th>System Name</th>
-        <th>Status</th>
-        <th>Last Updated</th>
-      </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-system>
-      <tr>
-          <td>{{system.name}}</td>
-          <td [ngClass]="{'available': system.status === 'true','in-use': system.status === 'false'}">{{system.status === 'true' ? 'Available  ' : 'In Use  '}}</td>
-          <td>{{formatDate(system.updated)}}</td>
-      </tr>
-  </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th>System Name</th>
+            <th>Status</th>
+            <th>Last Updated</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-system>
+        <tr>
+            <td>{{system.name}}</td>
+            <td ngClass="{{system.status === 'true' ? 'available' : 'in-use'}}">
+                {{ system.status === 'true' ? 'Available  ' : 'In Use' }}
+            </td>
+            <td>{{formatDate(system.updated)}}</td>
+        </tr>
+    </ng-template>
 </p-table>
