--- a/src/app/status-table/status-table.component.css
+++ b/src/app/status-table/status-table.component.css
@@ -1,19 +1,12 @@
-tr {
-  border-style: solid;
-  border-width: 2px;
-  border-color: black;
-}
 td {
   text-align: center;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 1.5rem;
 }
-
 .available {
-  background-color: green !important;
+  background-color: #49BAB7 !important;
   color: white !important;
  }
-.in_use {
-  background-color: red !important;
+.in-use {
+  background-color: #FF0053 !important;
+  color: white !important;
 }
-
