--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="ui-fluid">
   <div style="text-align: center;">
-    <img class="header-image" alt="Angular Logo" src="./assets/arcade.ico">
+    <img class="header-image" alt="Angular Logo" src="./assets/arcade.ico" />
   </div>
   <div class="ui-g">
-      <div class="ui-g-8">
-        <app-status-table [systems]="systems"></app-status-table>
-      </div>
-      <div class="ui-g-4 clock-wrapper">
-        <div class="clock-face">{{parsedTime}}</div>
-      </div>
+    <div class="ui-g-8">
+      <app-status-table [systems]="systems"></app-status-table>
+    </div>
+    <div class="ui-g-4 clock-wrapper">
+      <div class="clock-face">{{ parsedTime }}</div>
+    </div>
   </div>
 </div>
